--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,6 +23,9 @@ body {
     @apply border-b-[3px] border-primary;
 }
 
+.sc-iNWwEs.eSmbQy {
+    @apply h-11;
+}
 
 .sc-iNWwEs.gEpdue {
     @apply h-11;
