Wallet display styling

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -57,7 +57,7 @@ button.sc-eKszNL.iNgMlR {
     background-color: rgb(112 26 117 / 0.7);
 }
 
-.sc-kgflAQ-giMJGU {
+.sc-kgflAQ.giMJGU {
     border-radius: 0.25rem;
     background-color: rgb(112 26 117 / 0.7);
 }
@@ -68,14 +68,10 @@ button.sc-eKszNL.iNgMlR {
     color: #fae8ff ;   
 }
 
-.sc-cxabCf.cWXaHK{
+.sc-evZas.cPNcQg{
 	font-size: 0.875rem; /* 14px */
     line-height: 1.25rem; /* 20px */
     color: #fae8ff ;
-}
-
-.sc-cxabCf.cWXaHK::after{
-    content: " MATIC";
 }
 
 .sc-jOrMOR.dATLYY::after {
