--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,11 +50,16 @@ button.sc-fLlhyt.kYKtpL{
 
 
 button.sc-eKszNL.hTwLpN {
-    @apply bg-primary hover:bg-primary-dark duration-200 [&>span]:text-zinc-50 rounded !border-none;
+    @apply bg-violet-900  hover:bg-fuchsia-500 duration-200 [&>span]:text-zinc-50 rounded !border-none;
 }
 
 button.sc-eKszNL.iNgMlR {
-    @apply bg-violet-600 hover:bg-violet-900 duration-200 [&>span]:text-zinc-50 rounded !border-none;
+    @apply bg-violet-700 hover:bg-violet-900 duration-200 [&>span]:text-zinc-50 rounded !border-none;
+   
+} 
+
+.sc-eKszNL.iNgMlR {
+
     background: none;
     rsor: pointer;
     font: inherit;
@@ -74,9 +79,10 @@ button.sc-eKszNL.iNgMlR {
    
 } 
 
+
 .sc-jfmDQi.byjoRM {
     border-radius: 0.25rem;
-    background-color: rgb(112 26 117 / 0.7);
+    background-color: rgb(217 70 239 / 0.7);
 }
 
 .sc-kgflAQ.giMJGU {
